--- a/src/routes/Home.css
+++ b/src/routes/Home.css
@@ -1,4 +1,31 @@
+.catalogo {
+    width:25%;
+    float:left;
+}
+
+.catalogo h1 {
+    text-align: center;
+    font-size: 1.3rem;
+}
+
+
 section img {
     width:15rem;
     height:15rem;
+}
+
+.btnLerMais {
+    text-align: center;
+}
+
+.catalogo img :hover {
+    transform: translatez(+200px)
+}
+
+.teste img{
+    width:15rem;
+    height:15rem;
+    align-items: center;
+    justify-content: center;
+    display:flex;
 }
