--- a/src/componentes/NavBar.css
+++ b/src/componentes/NavBar.css
@@ -1,24 +1,67 @@
-.navbar{
-    display:flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 1rem 2rem;
-    background-color: rgb(66, 65, 65);
+.container {
+    max-width: 100%;
+    width:100%;
+    background-color: #333333;
 }
 
-.navbar h2 a {
-    opacity:1;
+header {
+    position: relative;
+    top: 0;
+    height:auto;
+    width:100%;
 }
 
-.navbar ul {
-    display: flex;
-    gap: 1rem;
+nav {
+    position: fixed;
+    top:0;
+    height:100%;
+    width: 100%;
+    z-index: 1;
+    background-color:#FFFFFF;
+    border-bottom: #ffffff;
 }
 
-.new-btn {
-    font-weight: bold;
-    border: 1px solid #FFF;
-    padding: 0.5rem 1rem;
-    border-radius: 1rem;
-    opacity: 1;
+nav::after {
+    clear: both;
+    content: "";
+    display: block;
+}
+
+.navBar {
+    max-width:75rem;
+    position: relative;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.logo {
+    width:6.25rem;
+    height:6.25rem;
+    margin-top:0px;
+}
+
+.navBar ul {
+    float: right;
+    height:6.25rem;
+    line-height: 6.25rem;
+    margin:0;
+}
+
+.navBar li {
+    list-style:none;
+    float: left;
+    margin: 0 .9375rem;
+}
+
+.navBar li a {
+    font-size: 1.375rem; 
+    text-decoration: none;
+    color: #000;
+    transition: 0.5s;
+}
+
+.navBar li a:hover{
+    color:#FFFFFF;
+   background-color: #000;
+   border-radius: 5%;
 }
